# FedSDC

./: README.md  client_app.py  pyproject.toml  requirements.txt  run_for_sparse.py  server_app.py
backbone/: resnet18_gn.py  resnet50.py
baselines/: base_client.py  base_strategy.py  task.py
dataset/: blood_datasets.py  ham_dataset.py
fedsdc/: fedsdc_client.py  fedsdc_model.py  fedsdc_strategy.py
